--- a/index.html
+++ b/index.html
@@ -4,32 +4,46 @@
     <link rel="stylesheet" href="css/styles.css">
     <!--Google fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <h1>Spread some Love,</h1>
-    <h3>one post at a time</h3>
-    <div id="container">
-      <div id="form">
-        <form id="post-form">
-            <label for="title"><h4>Title</h4></label><br>
-            <input type="text" name="title" placeholder="title"><br>
+      <h1>Spread some Love,</h1>
+      <h3>one post at a time</h3>
+        <div id="form">
+          <form id="post-form">
+              <input type="text" name="title" placeholder="title"><br>
+              <label for="content"></label><br>
+              <textarea type="text" name="content" rows="20" cols="80" placeholder="Spread  the love..."> </textarea>
+              <br>
+              <label for="author_name">Name</label><br>
+              <input type="text" name="author_name" placeholder="name">
+              <br>
+              <input type="submit" value="Submit">
+          </form>
+
+          <!--<form id="comment-form">
+            <h4>Would you like to add a comment?</h4>
             <label for="content"></label><br>
-            <textarea type="text" name="content" rows="40" cols="40" placeholder="Spread the love..."> </textarea>
+            <textarea type="text" name="comment-content" rows="10" cols="80"  placeholder="Spread the love..."> </textarea>
             <br>
-            <label for="author_name">Name</label><br>
-            <input type="text" name="author_name" placeholder="name">
+            <label for="name"><h4>Name</h4></label>
+            <input type="text" name="name" placeholder="your name">
+            <br>
             <br>
             <input type="submit" value="Submit">
-        </form>
-      </div>
-      <div id="post-container">
-      </div>
-    </div>
+          </form>-->
+
+        </div><!--closing div for form-->
+        <div id="post-container">
+        </div>
+        <div id="comment-container">
+        </div> 
   </body>
   <script type="text/javascript" src="js/services/API.js"></script>
-  <script type="text/javascript" src="js/src/index.js"></script>
-
   <script type="text/javascript" src="js/models/post.js"></script>
+  <script type="text/javascript" src="js/models/comment.js"></script>
+  <script type="text/javascript" src="js/src/index.js"></script>
   
 
 </html>
