Added img tag to form

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
               <input type="text" name="title" required size="93" placeholder="title">
               <br>
               <br>
-              <textarea type="text" name="content" rows="10" cols="80" maxlength="150" placeholder="Spread  the love..."></textarea>
+              <textarea type="text" name="content" rows="10" cols="80" required size="150" placeholder="Spread  the love..."></textarea>
+              <br>
+              <br>
+              <input type="text" name="image" required size="50" placeholder="image"/>
               <br>
               <br>
               <input type="text" name="author_name" required size="50" placeholder="name">
